# PlanetaryImager

./: .CMakeLists.txt.kate-swp  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Changelog.md  QHYImager.cpp  QHYImager.h  QHYImager.kdev4  README.md  backport  fix_qhyccd_install_path  main.cpp  packaging.cmake
files/: CMakeLists.txt  Info.plist  create_icns  create_ico  planetary_imager.desktop.in  planetary_imager.icns  planetary_imager.rc  planetary_imager_osx_launcher.sh
files/icons/: CMakeLists.txt
src/: CMakeLists.txt  QHYImager.cpp  QHYImager.h  camerasettingswidget.cpp  camerasettingswidget.h  camerasettingswidget.ui  configuration.cpp  configuration.h  configurationdialog.cpp  configurationdialog.h  configurationdialog.ui  displayimage.cpp  displayimage.h  dptr.h  fps_counter.cpp  fps_counter.h  frame.cpp  frame.h  histogram.cpp  histogram.h  image_data.h  imagehandler.h  main.cpp  mainwindowwidgets.cpp  mainwindowwidgets.h  opencv_utils.h  planetaryimager.cpp  planetaryimager.h  planetaryimager_daemon.cpp  planetaryimager_frontend.cpp  planetaryimager_main.cpp  planetaryimager_mainwindow.cpp  planetaryimager_mainwindow.h  planetaryimager_mainwindow.ui  planetaryimager_scripting.cpp  qhy_messages.in  qhyccdimager.cpp  qhyccdimager.h  qhydriver.cpp  qhydriver.h  (+17 more)
src/bundle_install/: CMakeLists.txt  macdeployqt
src/commons/: CMakeLists.txt  commandline.cpp  commandline.h  configuration.cpp  configuration.h  configurationdialog.cpp  configurationdialog.h  configurationdialog.ui  crashhandler.cpp  crashhandler.h  definitions.h.in  elapsedtimer.cpp  elapsedtimer.h  exposuretimer.cpp  exposuretimer.h  filesystembrowser.cpp  filesystembrowser.h  fps_counter.cpp  fps_counter.h  frame.cpp  frame.h  fwd.h  getstacktrace.cpp  getstacktrace.h  loghandler.cpp  loghandler.h  messageslogger.cpp  messageslogger.h  opencv_utils.h  scriptingengine.cpp  scriptingengine.h  ser_header.cpp  ser_header.h  tracking.cpp  tracking.h  utils.h  version.h.in
src/commons/mount/: CMakeLists.txt  indi.cpp  mount.cpp  mount.h
src/drivers/: .imager.h.kate-swp  CMakeLists.txt  available_drivers.h.in  driver.cpp  driver.h  driver.json.in  imager.cpp  imager.h  imagercontrol.cpp  imagerexception.cpp  imagerexception.h  imagerproperties.cpp  imagerthread.cpp  imagerthread.h  roi.cpp  roi.h  supporteddrivers.cpp  supporteddrivers.h
src/drivers/flycapture2/: CMakeLists.txt  FlyCapture2_C.def  driver.json  fc2_driver.cpp  fc2_driver.h  fc2_exception.h  fc2_imager.cpp  fc2_imager.h  fc2_worker.cpp  fc2_worker.h
src/drivers/iidc/: CMakeLists.txt  driver.json  iidc_deleters.h  iidc_driver.cpp  iidc_driver.h  iidc_exception.h  iidc_imager.cpp  iidc_imager.h  iidc_worker.cpp  iidc_worker.h
src/drivers/qhy/: CMakeLists.txt  QHYCCD.cmake.in  driver.json  qhy_fix_libusb_include.py  qhy_messages.in  qhyccdimager.cpp  qhyccdimager.h  qhycontrol.cpp  qhycontrol.h  qhydriver.cpp  qhydriver.h  qhyexception.cpp  qhyexception.cpp.in  qhyexception.h  qhyimagingworker.cpp  qhyimagingworker.h
src/drivers/qmultimedia/: CMakeLists.txt  qmultimediadriver.cpp  qmultimediadriver.h  qmultimediaimager.cpp  qmultimediaimager.h
src/drivers/simulator/: .simulatorimager.cpp.swp  CMakeLists.txt  driver.json  serimager.cpp  serimager.h  simulator.qrc  simulatordriver.cpp  simulatordriver.h  simulatorimager.cpp  simulatorimager.h
src/drivers/v4l2/: CMakeLists.txt  driver.json  v4l2buffer.cpp  v4l2buffer.h  v4l2control.cpp  v4l2control.h  v4l2device.cpp  v4l2device.h  v4l2driver.cpp  v4l2driver.h  v4l2exception.cpp  v4l2exception.h  v4l2formats.cpp  v4l2formats.h  v4l2imager.cpp  v4l2imager.h  v4l2imager_p.h  v4l2imager_rules.cpp  v4l2imager_rules.h  v4l2imagingworker.cpp  v4l2imagingworker.h  v4l2utils.h  v4lbuffer.cpp  v4lbuffer.h  v4ldevice.cpp  v4ldevice.h
src/drivers/webcam/: CMakeLists.txt  webcamdriver.cpp  webcamdriver.h  webcamimager.cpp  webcamimager.h  webcamimager_p.h  webcamimager_rules.cpp
src/drivers/zwo_asi/: CMakeLists.txt  asicontrol.cpp  asicontrol.h  asiimagingworker.cpp  asiimagingworker.h  driver.json  zwo_asi_driver.cpp  zwo_asi_driver.h  zwo_asi_imager.cpp  zwo_asi_imager.h  zwoexception.cpp  zwoexception.h
src/image_handlers/: CMakeLists.txt  displayimage.cpp  displayimage.h  histogram.cpp  histogram.h  imagehandler.h  local_saveimages.cpp  local_saveimages.h  recordinginformation.cpp  saveimages.cpp  saveimages.h  threadimagehandler.cpp  threadimagehandler.h
src/image_handlers/backend/: local_saveimages.cpp  local_saveimages.h  recordinginformation.cpp  recordinginformation.h
src/image_handlers/frontend/: displayimage.cpp  displayimage.h  histLib.cpp  histLib.h  histogram.h  (+1 more)
src/mount/: CMakeLists.txt  mount.cpp
src/network/: CMakeLists.txt  networkdispatcher.cpp  networkdispatcher.h  networkpacket.cpp  networkpacket.h  networkreceiver.cpp  networkreceiver.h
src/output_writers/: CMakeLists.txt  cvvideowriter.cpp  cvvideowriter.h  filewriter.cpp  filewriter.h  ser_header.h  serwriter.cpp  serwriter.h
src/resources/: darken  rename  resources.qrc
src/widgets/: CMakeLists.txt  cameracontrolswidget.cpp  cameracontrolswidget.h  cameracontrolswidget.ui  camerainfowidget.cpp  camerainfowidget.h  camerainfowidget.ui  camerasettingswidget.cpp  camerasettingswidget.h  configurationdialog.cpp  configurationdialog.h  configurationdialog.ui  controlspresetsdialog.cpp  controlspresetsdialog.h  controlspresetsdialog.ui  editroidialog.cpp  editroidialog.h  editroidialog.ui  histogram.cpp  histogramstatswidget.cpp  histogramstatswidget.h  histogramstatswidget.ui  histogramwidget.cpp  histogramwidget.h  histogramwidget.ui  localfilesystembrowser.cpp  localfilesystembrowser.h  mount_dialog.cpp  mount_dialog.h  mount_dialog.ui  mount_widget.cpp  mount_widget.h  mountwidget.cpp  mountwidget.ui  recordingpanel.cpp  recordingpanel.h  recordingpanel.ui  savefileconfiguration.cpp  savefileconfiguration.h  savefileconfiguration.ui  (+6 more)
tests/: CMakeLists.txt  GoogleTest.cmake.in  test_frame.cpp  test_networkpacket.cpp  test_qimage_destructor.cpp  test_roi_validator.cpp  test_ser_header.cpp
(+699 files in other folders)
