set(application_name "planetary_imager" CACHE INTERNAL "Force executable name, useful for wrapper launch")
if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
  configure_file(planetary_imager.desktop.in planetary_imager.desktop)
  install(FILES ${CMAKE_CURRENT_BINARY_DIR}/planetary_imager.desktop DESTINATION share/applications)
  add_subdirectory(icons)
endif()
if(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
    install(FILES planetary_imager.icns DESTINATION ${APPBUNDLE_INSTALL_PREFIX}/Resources)
    set(MACOSX_BUNDLE_ICON_FILE planetary_imager.icns CACHE INTERNAL "")
#     install(FILES Info.plist DESTINATION .)
#     install(PROGRAMS planetary_imager_osx_launcher.sh DESTINATION MacOS)
endif()
