file(GLOB all_image_handlers *.h)
file(GLOB image_handlers_SRCS *.cpp)
foreach(filename ${all_image_handlers})
    file(APPEND "${CMAKE_CURRENT_BINARY_DIR}/all_handlers.h" "#include \"${filename}\"\n")
endforeach()
add_library(image_handlers STATIC ${image_handlers_SRCS})
add_imager_dependencies(image_handlers)
add_subdirectory(output_writers)
