file(GLOB NetworkServer_SRCS server/*.cpp)
file(GLOB NetworkScriptingServer_SRCS server/scripting/*.cpp)
file(GLOB NetworkClient_SRCS client/*.cpp)
file(GLOB NetworkScriptingClient_SRCS client/scripting/*.cpp)
file(GLOB NetworkClient_GUI_SRCS client/gui/*.cpp)
file(GLOB NetworkProtocol_SRCS protocol/*.cpp)
set(Network_Commons_SRCS networkpacket.cpp networkdispatcher.cpp ${NetworkProtocol_SRCS})
add_library(network_server STATIC ${NetworkScriptingServer_SRCS} ${NetworkServer_SRCS} ${Network_Commons_SRCS})
add_library(network_client STATIC ${NetworkClient_SRCS} ${Network_Commons_SRCS})
if(build_scripting_client)
add_library(network_scripting_client STATIC ${NetworkScriptingClient_SRCS})
endif()
add_library(network_client_gui STATIC ${NetworkClient_GUI_SRCS})
