add_library(output_writers filewriter.cpp)
add_imager_dependencies(output_writers)
add_library(ser_writer serwriter.cpp)
add_imager_dependencies(ser_writer)
if(NOT opencv_LINK_BUG)
  add_library(video_writer cvvideowriter.cpp)
  add_definitions(-DHAVE_CV_VIDEO)
  add_imager_dependencies(video_writer)
endif(NOT opencv_LINK_BUG)