add_library(planetaryimager-widgets STATIC
    statusbarinfowidget.cpp
    statusbarinfowidget.ui
    recordingpanel.cpp
    recordingpanel.ui
    cameracontrolswidget.cpp
    cameracontrolswidget.ui
    camerainfowidget.ui
    camerainfowidget.cpp
    controls/controlwidget.cpp
    controls/boolcontrolwidget.cpp
    controls/numbercontrolwidget.cpp
    controls/menucontrolwidget.cpp
    controls/durationcontrolwidget.cpp
)
